[gd_scene load_steps=13 format=3 uid="uid://brp6gcj5yxsrp"]

[ext_resource type="Texture2D" uid="uid://pucgh0qbmij" path="res://assets/Bg.png" id="1_fbruq"]
[ext_resource type="FontFile" uid="uid://cwd1tkm36irny" path="res://assets/pixel_font.ttf" id="2_bf3qf"]
[ext_resource type="Script" path="res://main.gd" id="2_h0d34"]
[ext_resource type="Script" path="res://player.gd" id="3_ul2rr"]
[ext_resource type="Script" path="res://cpu.gd" id="4_16hrx"]
[ext_resource type="Script" path="res://ball.gd" id="4_51vfc"]
[ext_resource type="Script" path="res://node.gd" id="7_7o1oi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6y131"]
size = Vector2(20, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_klisr"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ouwkr"]
size = Vector2(1152, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ye0io"]
size = Vector2(1152, 42)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ah7up"]
size = Vector2(33, 640)

[node name="Main" type="Sprite2D"]
texture_filter = 1
texture = ExtResource("1_fbruq")
centered = false
script = ExtResource("2_h0d34")

[node name="player" type="StaticBody2D" parent="."]
position = Vector2(50, 324)
script = ExtResource("3_ul2rr")

[node name="ColorRect" type="ColorRect" parent="player"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -60.0
offset_right = 20.0
offset_bottom = 60.0
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_6y131")

[node name="cpu" type="StaticBody2D" parent="."]
position = Vector2(1082, 324)
script = ExtResource("4_16hrx")

[node name="ColorRect" type="ColorRect" parent="cpu"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -60.0
offset_right = 20.0
offset_bottom = 60.0
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="cpu"]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_6y131")

[node name="ball" type="CharacterBody2D" parent="."]
position = Vector2(576, 324)
collision_mask = 3
script = ExtResource("4_51vfc")

[node name="ColorRect" type="ColorRect" parent="ball"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ball"]
shape = SubResource("RectangleShape2D_klisr")

[node name="borders" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="top" type="CollisionShape2D" parent="borders"]
position = Vector2(576, -20)
shape = SubResource("RectangleShape2D_ouwkr")

[node name="bottom" type="CollisionShape2D" parent="borders"]
position = Vector2(576, 664)
shape = SubResource("RectangleShape2D_ye0io")

[node name="scoreLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="scoreLeft"]
position = Vector2(-16.5, 320)
shape = SubResource("RectangleShape2D_ah7up")

[node name="scoreRight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="scoreRight"]
position = Vector2(1168, 320)
shape = SubResource("RectangleShape2D_ah7up")

[node name="Hud" type="CanvasLayer" parent="."]

[node name="playerScore" type="Label" parent="Hud"]
offset_left = 456.0
offset_right = 506.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("2_bf3qf")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="cpuScore" type="Label" parent="Hud"]
offset_left = 648.0
offset_right = 698.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("2_bf3qf")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BallTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="WebSocketNode" type="Node" parent="."]
script = ExtResource("7_7o1oi")

[connection signal="body_entered" from="scoreLeft" to="." method="_on_score_left_body_entered"]
[connection signal="body_entered" from="scoreRight" to="." method="_on_score_right_body_entered"]
[connection signal="timeout" from="BallTimer" to="." method="_on_ball_timer_timeout"]
